[gd_scene load_steps=3 format=3 uid="uid://game_world"]

[ext_resource type="Script" path="res://scripts/game_world.gd" id="1_world"]
[ext_resource type="Script" path="res://scripts/player/player.gd" id="2_player"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_world")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.25, 0.2, 1)

[node name="Ground" type="Node2D" parent="."]

[node name="FloorTile" type="ColorRect" parent="Ground"]
offset_left = 200.0
offset_top = 200.0
offset_right = 1080.0
offset_bottom = 600.0
color = Color(0.3, 0.35, 0.3, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(640, 400)
script = ExtResource("2_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_player")

[node name="Sprite" type="ColorRect" parent="Player"]
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 8.0
color = Color(0, 0.7, 1, 1)

[node name="Shadow" type="ColorRect" parent="Player"]
offset_left = -12.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 8.0
color = Color(0, 0, 0, 0.3)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnergyBar" type="HBoxContainer" parent="UI/HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0

[node name="EnergyIcon" type="Label" parent="UI/HUD/EnergyBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "⚡"

[node name="EnergyLabel" type="Label" parent="UI/HUD/EnergyBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "100/100"

[node name="LocationLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Vila Esperança - Praça Central"
horizontal_alignment = 2

[node name="HelpText" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "WASD para mover | E para interagir | A para ARIA | ESC para menu"
horizontal_alignment = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(24, 24)
